Fixed Scroll Bar bug and Spacing

--- a/styles.css
+++ b/styles.css
@@ -1490,7 +1490,7 @@ ul {
 
 .aboutus-section-wrapper {
   width: 100%;
-  height: 100vh;
+  /* height: 100vh; */
   position: relative;
   display: flex;
   justify-content: center;
@@ -1499,11 +1499,11 @@ ul {
 
 .aboutus-section-container {
   width: 95%;
-  height: 100vh;
+  /* height: 100vh; */
   padding: 20px;
-  position: absolute;
+  /* position: absolute; */
   border-radius: 5px;
-  overflow: scroll;
+  /* overflow: scroll; */
 }
 
 .aboutus-container {
@@ -1533,6 +1533,7 @@ ul {
   display: flex;
   justify-content: center;
   align-items: flex-start;
+  padding: 0 2rem;
   flex-direction: column;
   font-family: "Roboto", sans-serif;
 }
@@ -1540,6 +1541,8 @@ ul {
 .aboutus-text-container h1 {
   font-size: 50px;
   padding: 10px 0px;
+  width: 100%;
+  text-align: center;
 }
 
 .aboutus-text-container p {
@@ -1550,7 +1553,7 @@ ul {
 .aboutus-text-container a {
   text-decoration: none;
   padding: 12px;
-  margin-top: 30px;
+  margin-top: 1rem;
   background-color: rgb(252, 115, 60);
   color: white;
   align-self: center;
@@ -1567,7 +1570,7 @@ ul {
 
 .ourservices-container {
   padding-top: 100px;
-  position: absolute;
+  /* position: absolute; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1593,12 +1596,15 @@ ul {
   display: flex;
   justify-content: center;
   align-items: flex-end;
+  padding: 0 2rem;
   flex-direction: column;
   font-family: "Roboto", sans-serif;
 }
 
 .ourservices-text-container h1 {
   font-size: 50px;
+  width: 100%;
+  text-align: center;
   padding: 10px 0px;
 }
 
